fix: hide webkit scrollbars

--- a/src/components/HomeComponents/AboutUs/AboutUs.css
+++ b/src/components/HomeComponents/AboutUs/AboutUs.css
@@ -3,6 +3,7 @@
         display: flex;
         flex-direction: column-reverse;
         position: relative;
+        margin-bottom: 75px;
     }
     
     .AboutUs-content {
@@ -128,13 +129,14 @@
         background-position: center;
         background-repeat: no-repeat;
         position: relative;
+        height: 250px;
         filter: brightness(50%);
     }
     
     .AboutUs-banner__items {
         display: grid;
         grid-template-columns: repeat(4, 3fr);
-        padding: 50px 0px;
+        padding: 75px 0px;
     }
     
     .AboutUs-banner__item {
