--- a/src/components/HomeComponents/Footer/Footer.css
+++ b/src/components/HomeComponents/Footer/Footer.css
@@ -96,7 +96,7 @@
         align-items: center;
         text-align: center;
         font-weight: bolder;
-        font-size: 10px;
+        font-size: 16px;
         font-family: Montserrat;
         letter-spacing: 1.3px;
         color: #424242;
