--- a/src/components/ProductComponents/PopularProducts/PopularProducts.css
+++ b/src/components/ProductComponents/PopularProducts/PopularProducts.css
@@ -11,7 +11,7 @@
         justify-content: center;
         align-items: center;
         padding: 50px 0 0 0;
-        margin-top: 100px;
+        margin: 75px 0;
     }
     
     .PopularProducts-header__title {
